[workspace]
members = [
    "packages/ulgen-api-proto",
    "packages/ulgen-core",
    "packages/ulgen-desktop",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["ULGEN Contributors"]
rust-version = "1.86"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = { version = "1.8", features = ["rustls"] }
aws-credential-types = "1.2"
aws-sdk-ec2 = { version = "1.108", features = ["rustls"] }
aws-sdk-cloudwatch = { version = "1.104", features = ["rustls"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tauri = { version = "2.2", features = ["macos-private-api"] }
thiserror = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
whoami = "1.4"
window-vibrancy = "0.7"
tauri-plugin-dialog = "2.2"
